[metadata]
name = project_displayer
version = 0.0.1
author = Juan_Giraldo
author_email = giraldoj@gmail.com
description = "fully automated pipeline to publish project results"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src